# Falconry

./: .gitignore  CLAUDE.md  Dockerfile  How_to_run.md  README.md  SETUP.md  keyboard-mavsdk-test.py  px4_ros2_gazebo.yml  setup_gimbal.py  uav_camera_det.py
docs/: drone_follow_backlog.md  drone_follow_design.md  drone_follow_setup.md
src/drone_follow/: package.xml  setup.py
src/drone_follow/drone_follow/: follower_node.py  geometry.py  perception_node.py  pid.py
src/drone_follow/launch/: follow.launch.py
src/drone_follow/test/: converge_and_check.py  e2e_headless.py  heartbeat_check.py  range_check.py  test_geometry.py  test_pid.py
src/drone_follow_msgs/: CMakeLists.txt  package.xml
src/drone_follow_msgs/msg/: TargetState.msg
